# standalone-unit-propagator

./: .gitignore  CMakeLists.txt  LICENSE  make_single_header.py
include/standalone-propagator/: eliminate_subsumed.h  extract_reduced_partial.h  literal_ops.h  model_builder.h  propagator.h  reason.h  stamp_set.h  types.h  unsat_exception.h
single_header/standalone-propagator/: standalone-propagator.h
test/: CMakeLists.txt  test_standalone_propagator.cpp
