add_executable(test_standalone_propagator test_standalone_propagator.cpp)
target_compile_features(test_standalone_propagator PRIVATE cxx_std_20)
target_include_directories(test_standalone_propagator PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
add_test(NAME run_test_standalone_propagator COMMAND test_standalone_propagator)

add_executable(test_standalone_propagator_single_header test_standalone_propagator.cpp)
target_compile_features(test_standalone_propagator_single_header PRIVATE cxx_std_20)
target_include_directories(test_standalone_propagator_single_header PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
target_include_directories(test_standalone_propagator_single_header PRIVATE "${CMAKE_CURRENT_LIST_DIR}/../single_header")
target_compile_definitions(test_standalone_propagator_single_header PRIVATE STANDALONE_PROPAGATOR_SINGLE_HEADER)
add_test(NAME run_test_standalone_propagator_single_header COMMAND test_standalone_propagator_single_header)
